# MickiewiczNaWodzie

./: CMakeLists.txt
resources/models/sailboat/: boat.mtl
resources/models/shark/: shark.mtl
resources/shaders/: assimp.f.glsl  assimp.v.glsl  shader.fs
resources/shaders/basic/: f_basic.glsl
resources/shaders/col_tex/: f_col_tex.glsl  v_col_tex.glsl
resources/shaders/color/: v_color.glsl
resources/shaders/skybox/: skybox.fs.glsl  skybox.vs.glsl
resources/shaders/sun/: f_sun.glsl  v_sun.glsl
resources/shaders/texture/: f_texture.glsl
resources/shaders/water/: grid.fs.glsl  grid.vs.glsl  grid_height.cs.glsl  grid_normals.cs.glsl
resources/shaders/wind/: f_wind_particle.glsl  v_wind_particle.glsl
src/: Mesh.h  Model.h  Shader.h  SingleMesh.h  Texture2D.h  glad.c  main.cpp
